parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    CASE
    COMENT
    CONST
    CONTINUE
    DECLARE
    DEFAULT
    DO
    ECHO
    EMPTY
    ENDFOR
    ENDFOREACH
    ENDIF
    ENDSWITCH
    ENDWHILE
    EXIT
    FOREACH
    GLOBAL
    GOTO
    IMPLEMENTS
    INCLUDE
    INCLUDE_ONCE
    ISSET
    LIST
    MATCH
    NAMESPACE
    NULL
    PRINT
    PRIVATE
    PROTECTED
    PUBLIC
    STATIC
    STRING
    SWITCH
    THROW
    TRAITS
    UNSET
    YIELD

Grammar

Rule 0     S' -> programa
Rule 1     programa -> INICIO functionorcmds FIM
Rule 2     programa -> INICIO functionorcmds
Rule 3     functionorcmds -> comando
Rule 4     functionorcmds -> function
Rule 5     functionorcmds -> comando functionorcmds
Rule 6     functionorcmds -> function functionorcmds
Rule 7     comando -> atribuir
Rule 8     comando -> exp PONTOVIRGULA
Rule 9     comando -> RETURN exp PONTOVIRGULA
Rule 10    comando -> IF LPAREN exp RPAREN LCHAV listadecomandos RCHAV ELSE LCHAV listadecomandos RCHAV
Rule 11    comando -> IF LPAREN exp RPAREN LCHAV listadecomandos RCHAV
Rule 12    comando -> FOR LPAREN atribuir exp PONTOVIRGULA exp RPAREN LCHAV listadecomandos RCHAV
Rule 13    comando -> WHILE LPAREN exp RPAREN LCHAV listadecomandos RCHAV
Rule 14    listadecomandos -> comando
Rule 15    listadecomandos -> listadecomandos comando
Rule 16    function -> FUNCTION ID LPAREN parametros RPAREN LCHAV listadecomandos RCHAV
Rule 17    function -> FUNCTION ID LPAREN RPAREN LCHAV listadecomandos RCHAV
Rule 18    atribuir -> VAR ATRIBUICAO exp PONTOVIRGULA
Rule 19    chamadaFunc -> ID LPAREN parametros RPAREN
Rule 20    chamadaFunc -> ID LPAREN RPAREN
Rule 21    parametros -> VAR VIRGULA parametros
Rule 22    parametros -> VAR
Rule 23    exp -> exp POT exp2
Rule 24    exp -> exp2
Rule 25    exp2 -> exp2 INCREMENTA
Rule 26    exp2 -> exp3
Rule 27    exp3 -> exp3 DECREMENTA
Rule 28    exp3 -> exp4
Rule 29    exp4 -> NOT exp5
Rule 30    exp4 -> exp5
Rule 31    exp5 -> exp5 SOMA exp6
Rule 32    exp5 -> exp6
Rule 33    exp6 -> exp6 SUB exp7
Rule 34    exp6 -> exp7
Rule 35    exp7 -> exp7 MULTI exp8
Rule 36    exp7 -> exp8
Rule 37    exp8 -> exp8 DIVISAO exp9
Rule 38    exp8 -> exp9
Rule 39    exp9 -> exp9 MODULO exp10
Rule 40    exp9 -> exp10
Rule 41    exp10 -> exp10 MAIOR exp11
Rule 42    exp10 -> exp11
Rule 43    exp11 -> exp11 MENOR exp12
Rule 44    exp11 -> exp12
Rule 45    exp12 -> exp12 MAIORIGUAL exp13
Rule 46    exp12 -> exp13
Rule 47    exp13 -> exp13 MENORIGUAL exp14
Rule 48    exp13 -> exp14
Rule 49    exp14 -> exp14 IGUAL exp15
Rule 50    exp14 -> exp15
Rule 51    exp15 -> exp15 DIFERENTE exp16
Rule 52    exp15 -> exp16
Rule 53    exp16 -> exp16 AND exp17
Rule 54    exp16 -> exp16 OR exp17
Rule 55    exp16 -> exp17
Rule 56    exp17 -> chamadaFunc
Rule 57    exp17 -> VAR
Rule 58    exp17 -> INT
Rule 59    exp17 -> FLOAT
Rule 60    exp17 -> BOOL
Rule 61    exp17 -> ID
Rule 62    exp17 -> LPAREN exp RPAREN

Terminals, with rules where they appear

AND                  : 53
ATRIBUICAO           : 18
BOOL                 : 60
BREAK                : 
CASE                 : 
COMENT               : 
CONST                : 
CONTINUE             : 
DECLARE              : 
DECREMENTA           : 27
DEFAULT              : 
DIFERENTE            : 51
DIVISAO              : 37
DO                   : 
ECHO                 : 
ELSE                 : 10
EMPTY                : 
ENDFOR               : 
ENDFOREACH           : 
ENDIF                : 
ENDSWITCH            : 
ENDWHILE             : 
EXIT                 : 
FIM                  : 1
FLOAT                : 59
FOR                  : 12
FOREACH              : 
FUNCTION             : 16 17
GLOBAL               : 
GOTO                 : 
ID                   : 16 17 19 20 61
IF                   : 10 11
IGUAL                : 49
IMPLEMENTS           : 
INCLUDE              : 
INCLUDE_ONCE         : 
INCREMENTA           : 25
INICIO               : 1 2
INT                  : 58
ISSET                : 
LCHAV                : 10 10 11 12 13 16 17
LIST                 : 
LPAREN               : 10 11 12 13 16 17 19 20 62
MAIOR                : 41
MAIORIGUAL           : 45
MATCH                : 
MENOR                : 43
MENORIGUAL           : 47
MODULO               : 39
MULTI                : 35
NAMESPACE            : 
NOT                  : 29
NULL                 : 
OR                   : 54
PONTOVIRGULA         : 8 9 12 18
POT                  : 23
PRINT                : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
RCHAV                : 10 10 11 12 13 16 17
RETURN               : 9
RPAREN               : 10 11 12 13 16 17 19 20 62
SOMA                 : 31
STATIC               : 
STRING               : 
SUB                  : 33
SWITCH               : 
THROW                : 
TRAITS               : 
UNSET                : 
VAR                  : 18 21 22 57
VIRGULA              : 21
WHILE                : 13
YIELD                : 
error                : 

Nonterminals, with rules where they appear

atribuir             : 7 12
chamadaFunc          : 56
comando              : 3 5 14 15
exp                  : 8 9 10 11 12 12 13 18 23 62
exp10                : 39 40 41
exp11                : 41 42 43
exp12                : 43 44 45
exp13                : 45 46 47
exp14                : 47 48 49
exp15                : 49 50 51
exp16                : 51 52 53 54
exp17                : 53 54 55
exp2                 : 23 24 25
exp3                 : 26 27
exp4                 : 28
exp5                 : 29 30 31
exp6                 : 31 32 33
exp7                 : 33 34 35
exp8                 : 35 36 37
exp9                 : 37 38 39
function             : 4 6
functionorcmds       : 1 2 5 6
listadecomandos      : 10 10 11 12 13 15 16 17
parametros           : 16 19 21
programa             : 0

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . INICIO functionorcmds FIM
    (2) programa -> . INICIO functionorcmds

    INICIO          shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> INICIO . functionorcmds FIM
    (2) programa -> INICIO . functionorcmds
    (3) functionorcmds -> . comando
    (4) functionorcmds -> . function
    (5) functionorcmds -> . comando functionorcmds
    (6) functionorcmds -> . function functionorcmds
    (7) comando -> . atribuir
    (8) comando -> . exp PONTOVIRGULA
    (9) comando -> . RETURN exp PONTOVIRGULA
    (10) comando -> . IF LPAREN exp RPAREN LCHAV listadecomandos RCHAV ELSE LCHAV listadecomandos RCHAV
    (11) comando -> . IF LPAREN exp RPAREN LCHAV listadecomandos RCHAV
    (12) comando -> . FOR LPAREN atribuir exp PONTOVIRGULA exp RPAREN LCHAV listadecomandos RCHAV
    (13) comando -> . WHILE LPAREN exp RPAREN LCHAV listadecomandos RCHAV
    (16) function -> . FUNCTION ID LPAREN parametros RPAREN LCHAV listadecomandos RCHAV
    (17) function -> . FUNCTION ID LPAREN RPAREN LCHAV listadecomandos RCHAV
    (18) atribuir -> . VAR ATRIBUICAO exp PONTOVIRGULA
    (23) exp -> . exp POT exp2
    (24) exp -> . exp2
    (25) exp2 -> . exp2 INCREMENTA
    (26) exp2 -> . exp3
    (27) exp3 -> . exp3 DECREMENTA
    (28) exp3 -> . exp4
    (29) exp4 -> . NOT exp5
    (30) exp4 -> . exp5
    (31) exp5 -> . exp5 SOMA exp6
    (32) exp5 -> . exp6
    (33) exp6 -> . exp6 SUB exp7
    (34) exp6 -> . exp7
    (35) exp7 -> . exp7 MULTI exp8
    (36) exp7 -> . exp8
    (37) exp8 -> . exp8 DIVISAO exp9
    (38) exp8 -> . exp9
    (39) exp9 -> . exp9 MODULO exp10
    (40) exp9 -> . exp10
    (41) exp10 -> . exp10 MAIOR exp11
    (42) exp10 -> . exp11
    (43) exp11 -> . exp11 MENOR exp12
    (44) exp11 -> . exp12
    (45) exp12 -> . exp12 MAIORIGUAL exp13
    (46) exp12 -> . exp13
    (47) exp13 -> . exp13 MENORIGUAL exp14
    (48) exp13 -> . exp14
    (49) exp14 -> . exp14 IGUAL exp15
    (50) exp14 -> . exp15
    (51) exp15 -> . exp15 DIFERENTE exp16
    (52) exp15 -> . exp16
    (53) exp16 -> . exp16 AND exp17
    (54) exp16 -> . exp16 OR exp17
    (55) exp16 -> . exp17
    (56) exp17 -> . chamadaFunc
    (57) exp17 -> . VAR
    (58) exp17 -> . INT
    (59) exp17 -> . FLOAT
    (60) exp17 -> . BOOL
    (61) exp17 -> . ID
    (62) exp17 -> . LPAREN exp RPAREN
    (19) chamadaFunc -> . ID LPAREN parametros RPAREN
    (20) chamadaFunc -> . ID LPAREN RPAREN

    RETURN          shift and go to state 8
    IF              shift and go to state 9
    FOR             shift and go to state 11
    WHILE           shift and go to state 12
    FUNCTION        shift and go to state 13
    VAR             shift and go to state 15
    NOT             shift and go to state 19
    INT             shift and go to state 34
    FLOAT           shift and go to state 35
    BOOL            shift and go to state 36
    ID              shift and go to state 14
    LPAREN          shift and go to state 10

    functionorcmds                 shift and go to state 3
    comando                        shift and go to state 4
    function                       shift and go to state 5
    atribuir                       shift and go to state 6
    exp                            shift and go to state 7
    exp2                           shift and go to state 16
    exp3                           shift and go to state 17
    exp4                           shift and go to state 18
    exp5                           shift and go to state 20
    exp6                           shift and go to state 21
    exp7                           shift and go to state 22
    exp8                           shift and go to state 23
    exp9                           shift and go to state 24
    exp10                          shift and go to state 25
    exp11                          shift and go to state 26
    exp12                          shift and go to state 27
    exp13                          shift and go to state 28
    exp14                          shift and go to state 29
    exp15                          shift and go to state 30
    exp16                          shift and go to state 31
    exp17                          shift and go to state 32
    chamadaFunc                    shift and go to state 33

state 3

    (1) programa -> INICIO functionorcmds . FIM
    (2) programa -> INICIO functionorcmds .

    FIM             shift and go to state 37
    $end            reduce using rule 2 (programa -> INICIO functionorcmds .)


state 4

    (3) functionorcmds -> comando .
    (5) functionorcmds -> comando . functionorcmds
    (3) functionorcmds -> . comando
    (4) functionorcmds -> . function
    (5) functionorcmds -> . comando functionorcmds
    (6) functionorcmds -> . function functionorcmds
    (7) comando -> . atribuir
    (8) comando -> . exp PONTOVIRGULA
    (9) comando -> . RETURN exp PONTOVIRGULA
    (10) comando -> . IF LPAREN exp RPAREN LCHAV listadecomandos RCHAV ELSE LCHAV listadecomandos RCHAV
    (11) comando -> . IF LPAREN exp RPAREN LCHAV listadecomandos RCHAV
    (12) comando -> . FOR LPAREN atribuir exp PONTOVIRGULA exp RPAREN LCHAV listadecomandos RCHAV
    (13) comando -> . WHILE LPAREN exp RPAREN LCHAV listadecomandos RCHAV
    (16) function -> . FUNCTION ID LPAREN parametros RPAREN LCHAV listadecomandos RCHAV
    (17) function -> . FUNCTION ID LPAREN RPAREN LCHAV listadecomandos RCHAV
    (18) atribuir -> . VAR ATRIBUICAO exp PONTOVIRGULA
    (23) exp -> . exp POT exp2
    (24) exp -> . exp2
    (25) exp2 -> . exp2 INCREMENTA
    (26) exp2 -> . exp3
    (27) exp3 -> . exp3 DECREMENTA
    (28) exp3 -> . exp4
    (29) exp4 -> . NOT exp5
    (30) exp4 -> . exp5
    (31) exp5 -> . exp5 SOMA exp6
    (32) exp5 -> . exp6
    (33) exp6 -> . exp6 SUB exp7
    (34) exp6 -> . exp7
    (35) exp7 -> . exp7 MULTI exp8
    (36) exp7 -> . exp8
    (37) exp8 -> . exp8 DIVISAO exp9
    (38) exp8 -> . exp9
    (39) exp9 -> . exp9 MODULO exp10
    (40) exp9 -> . exp10
    (41) exp10 -> . exp10 MAIOR exp11
    (42) exp10 -> . exp11
    (43) exp11 -> . exp11 MENOR exp12
    (44) exp11 -> . exp12
    (45) exp12 -> . exp12 MAIORIGUAL exp13
    (46) exp12 -> . exp13
    (47) exp13 -> . exp13 MENORIGUAL exp14
    (48) exp13 -> . exp14
    (49) exp14 -> . exp14 IGUAL exp15
    (50) exp14 -> . exp15
    (51) exp15 -> . exp15 DIFERENTE exp16
    (52) exp15 -> . exp16
    (53) exp16 -> . exp16 AND exp17
    (54) exp16 -> . exp16 OR exp17
    (55) exp16 -> . exp17
    (56) exp17 -> . chamadaFunc
    (57) exp17 -> . VAR
    (58) exp17 -> . INT
    (59) exp17 -> . FLOAT
    (60) exp17 -> . BOOL
    (61) exp17 -> . ID
    (62) exp17 -> . LPAREN exp RPAREN
    (19) chamadaFunc -> . ID LPAREN parametros RPAREN
    (20) chamadaFunc -> . ID LPAREN RPAREN

    FIM             reduce using rule 3 (functionorcmds -> comando .)
    $end            reduce using rule 3 (functionorcmds -> comando .)
    RETURN          shift and go to state 8
    IF              shift and go to state 9
    FOR             shift and go to state 11
    WHILE           shift and go to state 12
    FUNCTION        shift and go to state 13
    VAR             shift and go to state 15
    NOT             shift and go to state 19
    INT             shift and go to state 34
    FLOAT           shift and go to state 35
    BOOL            shift and go to state 36
    ID              shift and go to state 14
    LPAREN          shift and go to state 10

    comando                        shift and go to state 4
    functionorcmds                 shift and go to state 38
    function                       shift and go to state 5
    atribuir                       shift and go to state 6
    exp                            shift and go to state 7
    exp2                           shift and go to state 16
    exp3                           shift and go to state 17
    exp4                           shift and go to state 18
    exp5                           shift and go to state 20
    exp6                           shift and go to state 21
    exp7                           shift and go to state 22
    exp8                           shift and go to state 23
    exp9                           shift and go to state 24
    exp10                          shift and go to state 25
    exp11                          shift and go to state 26
    exp12                          shift and go to state 27
    exp13                          shift and go to state 28
    exp14                          shift and go to state 29
    exp15                          shift and go to state 30
    exp16                          shift and go to state 31
    exp17                          shift and go to state 32
    chamadaFunc                    shift and go to state 33

state 5

    (4) functionorcmds -> function .
    (6) functionorcmds -> function . functionorcmds
    (3) functionorcmds -> . comando
    (4) functionorcmds -> . function
    (5) functionorcmds -> . comando functionorcmds
    (6) functionorcmds -> . function functionorcmds
    (7) comando -> . atribuir
    (8) comando -> . exp PONTOVIRGULA
    (9) comando -> . RETURN exp PONTOVIRGULA
    (10) comando -> . IF LPAREN exp RPAREN LCHAV listadecomandos RCHAV ELSE LCHAV listadecomandos RCHAV
    (11) comando -> . IF LPAREN exp RPAREN LCHAV listadecomandos RCHAV
    (12) comando -> . FOR LPAREN atribuir exp PONTOVIRGULA exp RPAREN LCHAV listadecomandos RCHAV
    (13) comando -> . WHILE LPAREN exp RPAREN LCHAV listadecomandos RCHAV
    (16) function -> . FUNCTION ID LPAREN parametros RPAREN LCHAV listadecomandos RCHAV
    (17) function -> . FUNCTION ID LPAREN RPAREN LCHAV listadecomandos RCHAV
    (18) atribuir -> . VAR ATRIBUICAO exp PONTOVIRGULA
    (23) exp -> . exp POT exp2
    (24) exp -> . exp2
    (25) exp2 -> . exp2 INCREMENTA
    (26) exp2 -> . exp3
    (27) exp3 -> . exp3 DECREMENTA
    (28) exp3 -> . exp4
    (29) exp4 -> . NOT exp5
    (30) exp4 -> . exp5
    (31) exp5 -> . exp5 SOMA exp6
    (32) exp5 -> . exp6
    (33) exp6 -> . exp6 SUB exp7
    (34) exp6 -> . exp7
    (35) exp7 -> . exp7 MULTI exp8
    (36) exp7 -> . exp8
    (37) exp8 -> . exp8 DIVISAO exp9
    (38) exp8 -> . exp9
    (39) exp9 -> . exp9 MODULO exp10
    (40) exp9 -> . exp10
    (41) exp10 -> . exp10 MAIOR exp11
    (42) exp10 -> . exp11
    (43) exp11 -> . exp11 MENOR exp12
    (44) exp11 -> . exp12
    (45) exp12 -> . exp12 MAIORIGUAL exp13
    (46) exp12 -> . exp13
    (47) exp13 -> . exp13 MENORIGUAL exp14
    (48) exp13 -> . exp14
    (49) exp14 -> . exp14 IGUAL exp15
    (50) exp14 -> . exp15
    (51) exp15 -> . exp15 DIFERENTE exp16
    (52) exp15 -> . exp16
    (53) exp16 -> . exp16 AND exp17
    (54) exp16 -> . exp16 OR exp17
    (55) exp16 -> . exp17
    (56) exp17 -> . chamadaFunc
    (57) exp17 -> . VAR
    (58) exp17 -> . INT
    (59) exp17 -> . FLOAT
    (60) exp17 -> . BOOL
    (61) exp17 -> . ID
    (62) exp17 -> . LPAREN exp RPAREN
    (19) chamadaFunc -> . ID LPAREN parametros RPAREN
    (20) chamadaFunc -> . ID LPAREN RPAREN

    FIM             reduce using rule 4 (functionorcmds -> function .)
    $end            reduce using rule 4 (functionorcmds -> function .)
    RETURN          shift and go to state 8
    IF              shift and go to state 9
    FOR             shift and go to state 11
    WHILE           shift and go to state 12
    FUNCTION        shift and go to state 13
    VAR             shift and go to state 15
    NOT             shift and go to state 19
    INT             shift and go to state 34
    FLOAT           shift and go to state 35
    BOOL            shift and go to state 36
    ID              shift and go to state 14
    LPAREN          shift and go to state 10

    function                       shift and go to state 5
    functionorcmds                 shift and go to state 39
    comando                        shift and go to state 4
    atribuir                       shift and go to state 6
    exp                            shift and go to state 7
    exp2                           shift and go to state 16
    exp3                           shift and go to state 17
    exp4                           shift and go to state 18
    exp5                           shift and go to state 20
    exp6                           shift and go to state 21
    exp7                           shift and go to state 22
    exp8                           shift and go to state 23
    exp9                           shift and go to state 24
    exp10                          shift and go to state 25
    exp11                          shift and go to state 26
    exp12                          shift and go to state 27
    exp13                          shift and go to state 28
    exp14                          shift and go to state 29
    exp15                          shift and go to state 30
    exp16                          shift and go to state 31
    exp17                          shift and go to state 32
    chamadaFunc                    shift and go to state 33

state 6

    (7) comando -> atribuir .

    RETURN          reduce using rule 7 (comando -> atribuir .)
    IF              reduce using rule 7 (comando -> atribuir .)
    FOR             reduce using rule 7 (comando -> atribuir .)
    WHILE           reduce using rule 7 (comando -> atribuir .)
    FUNCTION        reduce using rule 7 (comando -> atribuir .)
    VAR             reduce using rule 7 (comando -> atribuir .)
    NOT             reduce using rule 7 (comando -> atribuir .)
    INT             reduce using rule 7 (comando -> atribuir .)
    FLOAT           reduce using rule 7 (comando -> atribuir .)
    BOOL            reduce using rule 7 (comando -> atribuir .)
    ID              reduce using rule 7 (comando -> atribuir .)
    LPAREN          reduce using rule 7 (comando -> atribuir .)
    FIM             reduce using rule 7 (comando -> atribuir .)
    $end            reduce using rule 7 (comando -> atribuir .)
    RCHAV           reduce using rule 7 (comando -> atribuir .)


state 7

    (8) comando -> exp . PONTOVIRGULA
    (23) exp -> exp . POT exp2

    PONTOVIRGULA    shift and go to state 40
    POT             shift and go to state 41


state 8

    (9) comando -> RETURN . exp PONTOVIRGULA
    (23) exp -> . exp POT exp2
    (24) exp -> . exp2
    (25) exp2 -> . exp2 INCREMENTA
    (26) exp2 -> . exp3
    (27) exp3 -> . exp3 DECREMENTA
    (28) exp3 -> . exp4
    (29) exp4 -> . NOT exp5
    (30) exp4 -> . exp5
    (31) exp5 -> . exp5 SOMA exp6
    (32) exp5 -> . exp6
    (33) exp6 -> . exp6 SUB exp7
    (34) exp6 -> . exp7
    (35) exp7 -> . exp7 MULTI exp8
    (36) exp7 -> . exp8
    (37) exp8 -> . exp8 DIVISAO exp9
    (38) exp8 -> . exp9
    (39) exp9 -> . exp9 MODULO exp10
    (40) exp9 -> . exp10
    (41) exp10 -> . exp10 MAIOR exp11
    (42) exp10 -> . exp11
    (43) exp11 -> . exp11 MENOR exp12
    (44) exp11 -> . exp12
    (45) exp12 -> . exp12 MAIORIGUAL exp13
    (46) exp12 -> . exp13
    (47) exp13 -> . exp13 MENORIGUAL exp14
    (48) exp13 -> . exp14
    (49) exp14 -> . exp14 IGUAL exp15
    (50) exp14 -> . exp15
    (51) exp15 -> . exp15 DIFERENTE exp16
    (52) exp15 -> . exp16
    (53) exp16 -> . exp16 AND exp17
    (54) exp16 -> . exp16 OR exp17
    (55) exp16 -> . exp17
    (56) exp17 -> . chamadaFunc
    (57) exp17 -> . VAR
    (58) exp17 -> . INT
    (59) exp17 -> . FLOAT
    (60) exp17 -> . BOOL
    (61) exp17 -> . ID
    (62) exp17 -> . LPAREN exp RPAREN
    (19) chamadaFunc -> . ID LPAREN parametros RPAREN
    (20) chamadaFunc -> . ID LPAREN RPAREN

    NOT             shift and go to state 19
    VAR             shift and go to state 43
    INT             shift and go to state 34
    FLOAT           shift and go to state 35
    BOOL            shift and go to state 36
    ID              shift and go to state 14
    LPAREN          shift and go to state 10

    exp                            shift and go to state 42
    exp2                           shift and go to state 16
    exp3                           shift and go to state 17
    exp4                           shift and go to state 18
    exp5                           shift and go to state 20
    exp6                           shift and go to state 21
    exp7                           shift and go to state 22
    exp8                           shift and go to state 23
    exp9                           shift and go to state 24
    exp10                          shift and go to state 25
    exp11                          shift and go to state 26
    exp12                          shift and go to state 27
    exp13                          shift and go to state 28
    exp14                          shift and go to state 29
    exp15                          shift and go to state 30
    exp16                          shift and go to state 31
    exp17                          shift and go to state 32
    chamadaFunc                    shift and go to state 33

state 9

    (10) comando -> IF . LPAREN exp RPAREN LCHAV listadecomandos RCHAV ELSE LCHAV listadecomandos RCHAV
    (11) comando -> IF . LPAREN exp RPAREN LCHAV listadecomandos RCHAV

    LPAREN          shift and go to state 44


state 10

    (62) exp17 -> LPAREN . exp RPAREN
    (23) exp -> . exp POT exp2
    (24) exp -> . exp2
    (25) exp2 -> . exp2 INCREMENTA
    (26) exp2 -> . exp3
    (27) exp3 -> . exp3 DECREMENTA
    (28) exp3 -> . exp4
    (29) exp4 -> . NOT exp5
    (30) exp4 -> . exp5
    (31) exp5 -> . exp5 SOMA exp6
    (32) exp5 -> . exp6
    (33) exp6 -> . exp6 SUB exp7
    (34) exp6 -> . exp7
    (35) exp7 -> . exp7 MULTI exp8
    (36) exp7 -> . exp8
    (37) exp8 -> . exp8 DIVISAO exp9
    (38) exp8 -> . exp9
    (39) exp9 -> . exp9 MODULO exp10
    (40) exp9 -> . exp10
    (41) exp10 -> . exp10 MAIOR exp11
    (42) exp10 -> . exp11
    (43) exp11 -> . exp11 MENOR exp12
    (44) exp11 -> . exp12
    (45) exp12 -> . exp12 MAIORIGUAL exp13
    (46) exp12 -> . exp13
    (47) exp13 -> . exp13 MENORIGUAL exp14
    (48) exp13 -> . exp14
    (49) exp14 -> . exp14 IGUAL exp15
    (50) exp14 -> . exp15
    (51) exp15 -> . exp15 DIFERENTE exp16
    (52) exp15 -> . exp16
    (53) exp16 -> . exp16 AND exp17
    (54) exp16 -> . exp16 OR exp17
    (55) exp16 -> . exp17
    (56) exp17 -> . chamadaFunc
    (57) exp17 -> . VAR
    (58) exp17 -> . INT
    (59) exp17 -> . FLOAT
    (60) exp17 -> . BOOL
    (61) exp17 -> . ID
    (62) exp17 -> . LPAREN exp RPAREN
    (19) chamadaFunc -> . ID LPAREN parametros RPAREN
    (20) chamadaFunc -> . ID LPAREN RPAREN
